complete for minor project

--- a/frontend/src/app/history/rider/rider.component.html
+++ b/frontend/src/app/history/rider/rider.component.html
@@ -79,9 +79,9 @@
             </table>
         </div>
     </div>
-    <div class="flex flex-column justify-content-center align-items-center mb-4">
+    <!-- <div class="flex flex-column justify-content-center align-items-center mb-4">
         <button pButton type="button" label="OTP: 7847" class="p-button-warning p-button-outlined"></button>
-    </div>
+    </div> -->
     <!-- <div class="flex flex-column justify-content-center align-items-center mb-4">
         <button pButton type="button" label="Request For Ride" class="p-button-warning" (click)="requestDriver(trip.driver)" [loading]="acceptButton"></button>
     </div> -->
