--- a/frontend/src/app/rider/start-ride/start-ride.component.html
+++ b/frontend/src/app/rider/start-ride/start-ride.component.html
@@ -34,10 +34,10 @@
     <div class="w-7"></div>
 </div>
 
-<p-dialog #dialog header="Register Vehicle" [(visible)]="displayModal" [modal]="true" [style]="{width: '50vw'}" [baseZIndex]="10000"
+<p-dialog #dialog header="Choose Vehicle" [(visible)]="displayModal" [modal]="true" [style]="{width: '50vw'}" [baseZIndex]="10000"
     [draggable]="false" [resizable]="false">
     <p-accordion>
-        <p-accordionTab header="Maruti Suzuki(₹200.00/-)" *ngFor="let trip of matchedTrips">
+        <p-accordionTab header="Maruti Suzuki({{trip.fare | currency:'INR'}})" *ngFor="let trip of matchedTrips">
                 <div class="flex flex-column justify-content-center align-items-center mb-4">
                     <img src="assets/images/car1.jpeg" height="100px" class="">
                     <h3 class="text-center uppercase">Maruti Desizer XUV</h3>
